--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
 
   </td>
     <td><strong>vipinrao</strong> <br>ceo co-founder groceryIn.</td>
-
+  <td>
+    <img src="shiv.jpg" width="180px"alt="no-img">
+  </td>
+  <td>
+    co-founder groceryIn|motivational speaker|writer...
+  </td>
 </tr>
 </table>
 
 <body>
   <p>
-    the vipin r sheregar is a founder and ceo of groceryIn a startup which delivers a grocery at ur door step.</p>
+    The vipin rao and shivathmaj shenoy founded groceryIn in 2021 , a startup which delivers a grocery at ur door step.
   </p>
   <a href="new.html">contact us </a>
 </body>
