--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
   <td>
 
-      <img src="https://pbs.twimg.com/profile_images/1292772362253787137/pWU9IjV7_400x400.jpg" alt="visittwitter@vipinraoin">
+      <img src="https://pbs.twimg.com/profile_images/1292772362253787137/pWU9IjV7_400x400.jpg" width="200px" lt="visittwitter@vipinraoin">
 
   </td>
     <td><strong>vipinrao</strong> <br>ceo co-founder groceryIn.</td>
   <td>
-    <img src="shiv.jpg" width="400px"alt="no-img">
+    <img src="shiv.jpg" width="220px"alt="no-img">
   </td>
   <td>
     co-founder groceryIn|motivational speaker|writer...
