--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
   <td>
 
-      <img src="https://pbs.twimg.com/profile_images/1292772362253787137/pWU9IjV7_400x400.jpg" width="200px" lt="visittwitter@vipinraoin">
+      <img src="https://pbs.twimg.com/profile_images/1292772362253787137/pWU9IjV7_400x400.jpg" width="220px" lt="visittwitter@vipinraoin">
 
   </td>
-    <td><strong>vipinrao</strong> <br>ceo co-founder groceryIn.</td>
+    <td><strong>Vipin Rao.</strong> <br>ceo co-founder groceryIn.</td>
   <td>
-    <img src="shiv.jpg" width="220px"alt="no-img">
+    <img src="shiv.jpg" width="200px"alt="no-img">
   </td>
   <td>
-    co-founder groceryIn|motivational speaker|writer...
+    <strong>Shivathmaj Shenoy. </strong>co-founder groceryIn|motivational speaker|writer...
   </td>
 </tr>
 </table>
