--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="shiv.jpg" width="200px"alt="no-img">
   </td>
   <td>
-    <strong>Shivathmaj Shenoy. </strong>co-founder groceryIn|motivational speaker|writer...
+    <strong>Shivathmaj Shenoy. </strong> <br> co-founder groceryIn|motivational speaker|writer...
   </td>
 </tr>
 </table>
