--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="https://pbs.twimg.com/profile_images/1292772362253787137/pWU9IjV7_400x400.jpg" width="220px" lt="visittwitter@vipinraoin">
 
   </td>
-    <td><strong>Vipin Rao.</strong> <br>ceo co-founder groceryIn.</td>
+    <td><strong>Vipin Rao.</strong> <br>co-founder groceryIn.</td>
   <td>
     <img src="shiv.jpg" width="200px"alt="no-img">
   </td>
