--- a/index.htm
+++ b/index.htm
@@ -26,6 +26,21 @@ table th {
   color: white;
   background-color: gray;
 }
+  a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
 </style>
 
 <body>
@@ -49,34 +64,34 @@ table th {
     </tr>
     <tr>
       <td>4.</td>
-      <td>Automata theory and computablilty</td>
+      <td><a href="ATC.htm">Automata theory and computablilty</a></td>
     </tr>
     <tr>
       <td>5.</td>
-      <td>Application development using python</td>
+      <td><a href="ADP.htm">Application development using python</a></td>
 
     </tr>
     <tr>
       <td>6.</td>
-      <td>Unix programming</td>
+      <td><a href="UP.htm">Unix programming</a></td>
     </tr>
     <tr>
       <td>7.</td>
-      <td>Computer network laboratory</td>
+      <td><a href="CNSL.htm">Computer network laboratory</a></td>
 
     </tr>
     <tr>
       <td>8.</td>
-      <td>DBMS laboratory</td>
+      <td><a href="DBMSL.htm">DBMS laboratory</a></td>
     </tr>
     <tr>
       <td>9.</td>
-      <td>Unix laboratory</td>
+      <td><a href="UPL.htm">Unix laboratory</a></td>
 
     </tr>
     <tr>
       <td>10.</td>
-      <td>PYTHON laboratory</td>
+      <td><a href="ADPL.htm">PYTHON laboratory</a></td>
     </tr>
     <tr>
       <td>11.</td>
