--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ATC</title>
+  <meta charset="utf-8">
+  <title>DBMSL</title>
 
   <style>
     table,
@@ -31,28 +31,23 @@
     <tr>
       <th>SR NO</th>
       <th>TOPIC</th>
-      <th>VIDEO LECTURER</th>
+      <th>VIDEO LECTURE</th>
     </tr>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <td>Intro</td>
+      <td>Basic SQL Queries,Sql Data Type,SQL DDL STATEMENTS AND DML STATEMENTS AND Examples on Basic SQL Queries.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fyeks5PtYM8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>E1 L1, L3</td>
+      <td>Creation and description of tables in library database containing primary keys,foreign keys,on delete cascade,datatypes in each table.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/9Hlwb64dwZo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>E1 L2</td>
+      <td>Schema diagram and Entity relationship diagram of library database containing cardinality ratio, participation constraints.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/KQIzmfAJh_I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td></td>
