--- a/UP.htm
+++ b/UP.htm
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ATC</title>
+  <title>UP</title>
 
   <style>
     table,
@@ -31,28 +31,30 @@
     <tr>
       <th>SR NO</th>
       <th>TOPIC</th>
-      <th>VIDEO LECTURER</th>
+      <th>VIDEO LECTURE</th>
     </tr>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <td>M1 L1</td>
+      <td>UNIX ARCHITECTURE, FEATURES, <br>ENVIRONMENTS and POSIX standards.
+</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/jvwq9_mzafs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L2</td>
+      <td>Command structure,types of command and basic UNIX command standards.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/oH3j9FoDuqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L3</td>
+      <td> Combining commands, <br>oot login, su, concept of files.
+</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/yjTBiAViPW0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L4</td>
+      <td>Command structure,<br> types of command and basic unix command standards.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/AXNWnK3yHB4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td></td>
@@ -70,3 +72,4 @@
 </body>
 
 </html>
+
