--- a/ATC.htm
+++ b/ATC.htm
@@ -31,29 +31,54 @@
     <tr>
       <th>SR NO</th>
       <th>TOPIC</th>
-      <th>VIDEO LECTURER</th>
+      <th>VIDEO LECTURE</th>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L1</td>
+      <td>Introduction to Automata Theory and computability, <br>applications of ATC, concepts of strings and Languages.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/HqXa9v1IuMc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L2</td>
+      <td>Introduction to Finite State Machines, <br>Working of a computation machines in general, Rules for designing valid DFSMs .</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/qlFOb2wzZ38" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L3</td>
+      <td>Designing DFSMs for Regular Languages.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/iOQNvX77BVc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L4</td>
+      <td>Designing DFSMs for Regular Languages.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/CVLnEALPoAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
+    </tr>
+    <tr>
+      <td>M1 L5</td>
+      <td>Designing DFSMs for Regular Languages.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/X7QtSUzHxdQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L6</td>
+      <td>Designing NDFSMs for Regular Languages.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/EcDf1PrhbDM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L7</td>
+      <td>Designing NDFSMs for Regular Languages.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/R4IXgl51-Cw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L8</td>
+      <td>Converting NDFSM (NFA) to DFSM (DFA).</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/XXEsjdtnDpU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L9</td>
+      <td>Converting NDFSM (NFA) to DFSM (DFA).</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/ELSl-Ra_lpM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
