--- a/ADP.htm
+++ b/ADP.htm
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ATC</title>
+  <title>ADP</title>
 
   <style>
     table,
@@ -31,33 +31,69 @@
     <tr>
       <th>SR NO</th>
       <th>TOPIC</th>
-      <th>VIDEO LECTURER</th>
-    </tr>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>VIDEO LECTURE</th>
     </tr>
     <tr>
       <td></td>
-      <td></td>
-      <td></td>
+      <td>Introduction</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Zj5NRVnxTY8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
+      <td>M1 L1</td>
+      <td>Basics of python programming: Pythons IDLE (Integrated Development and <br>
+Learning Environment), Expressions, Basic arithmetic operators, Data types, Programming examples and Demonstrations.
+</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/tUAeEZ0K0NY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
+    </tr>
+    <tr>
+      <td>M1 L2</td>
+      <td>Basic string operations, Defining variables, <br>
+Variable naming rules, comments, Programming examples and Demonstrations</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/LPcQ3vmfID8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
+    </tr>
+    <tr>
+      <td>M1 L3</td>
+      <td>Input and Output functions, Data types, Type conversion functions, string length method, <br>
+Python program development, Programming examples and Demonstrations.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2PSWjFO2gRs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L4</td>
+      <td> Boolean values, comparison and Boolean operators and how to use these operators in a conditional <br> expression with suitable Programming examples and Demonstrations</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/eoQlvr6QdL8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
+    </tr>
+    <tr>
+      <td>M1 L5</td>
       <td></td>
       <td></td>
 
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L6</td>
+      <td>Importing Modules, and Ending a Program Early with <br> sys.exit() function with suitable Programming examples and Demonstrations</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/5HXhGOr_8nA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>M1 L7</td>
+      <td> Functions, Definition and Parameters, Function Execution,<br> Advantages, Programming examples and Demonstrations.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/im5SK9zwjCE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
+    </tr>
+    <tr>
+      <td>M1 L8</td>
+      <td>Functions, Definition and return values, <br> None datatype, Keyword parameters, Programming examples
+and Demonstrations.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/uSliWYDjFqM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
+    </tr>
+    <tr>
+      <td>M1 L9</td>
+      <td> Functions and variable scope, Scope rules, <br> Elements of exception handling, Programming examples and Demonstrations.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/VV14IR_j8qk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
   </table>
