--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,7 @@ a:active {
     </tr>
     <tr>
       <td>7.</td>
-      <td><a href="CNSL.htm">Computer network laboratory</a></td>
+      <td><a href="CNL.htm">Computer network laboratory</a></td>
 
     </tr>
     <tr>
