--- a/UPL.htm
+++ b/UPL.htm
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ATC</title>
 
   <style>
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <p>NOT YET UPLOADED</p>
   <table>
     <tr>
       <th>SR NO</th>
