--- a/CNL.htm
+++ b/CNL.htm
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+    <p>Computer Network Laboratory</p>
   <table>
     <tr>
       <th>SR NO</th>
@@ -60,7 +61,7 @@
 </body>
 
 </html>
->
+
 
 </table>
 </body>
