--- a/ME.htm
+++ b/ME.htm
@@ -21,8 +21,8 @@ table th {
 </style>
 
 <body>
-  <p>Management and Entreprenuer for IT Industry (ME)</p>
-  <h1>ME</h1>
+  <h1>Management and Entreprenuer for IT Industry (ME)</h1>
+  
   <table>
     <tr>
       <th>
