--- a/ADP.htm
+++ b/ADP.htm
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <p>Application development using Python</p>
+  <h1>Application development using Python</h1>
   <table>
     <tr>
       <th>SR NO</th>
