--- a/ATC.htm
+++ b/ATC.htm
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <p>Automata theory and computability.</p>
+  <h1>Automata theory and computability(ATC).</h1>
   <table>
     <tr>
       <th>SR NO</th>
