--- a/CNL.htm
+++ b/CNL.htm
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <p>Computer Network Laboratory</p>
+    <h1>Computer Network Laboratory(CNL)</h1>
   <table>
     <tr>
       <th>SR NO</th>
