--- a/CNS.htm
+++ b/CNS.htm
@@ -26,7 +26,7 @@ table th {
       <tr>
         <th>SR NO</th>
         <th>TOPIC</th>
-        <th>VIDEO LECTURER</th>
+        <th>VIDEO LECTURE</th>
       </tr>
 <tr>
   <td></td>
