--- a/DBMS.htm
+++ b/DBMS.htm
@@ -25,12 +25,12 @@
   </style>
 
 <body>
-  <p>DBMS.</p>
+  <h1>Database Management System (DBMS)</h1>
   <table>
     <tr>
       <th>SR NO</th>
       <th>TOPIC</th>
-      <th>VIDEO LECTURER</th>
+      <th>VIDEO LECTURE</th>
     </tr>
     <tr>
       <td>M1 L1</td>
