--- a/ME.htm
+++ b/ME.htm
@@ -29,10 +29,10 @@ table th {
       SR NO
       </th>
       <th>
-      Topic
+      TOPIC
       </th>
       <th>
-      video lecture
+      VIDEO LECTURE
       </th>
     </tr>
 
