--- a/UPL.htm
+++ b/UPL.htm
@@ -28,12 +28,12 @@
 
 <body>
   <p>NOT YET UPLOADED</p>
-       <p>Unix Laboratory</p>
+       <h1>Unix Laboratory</h1>
   <table>
     <tr>
       <th>SR NO</th>
       <th>TOPIC</th>
-      <th>VIDEO LECTURER</th>
+      <th>VIDEO LECTURE</th>
     </tr>
     <tr>
       <th></th>
