--- a/index.htm
+++ b/index.htm
@@ -47,8 +47,8 @@ a:active {
   <h1>WELCOME TO CEC YOUTUBE LEARNING</h1>
   <table>
     <tr>
-    <th>sr no</th>
-    <th>subject</th>
+    <th>SR NO</th>
+    <th>SUBJECT</th>
     </tr>
     <tr>
       <td>1.</td>
