--- a/ADPL.htm
+++ b/ADPL.htm
@@ -33,7 +33,7 @@
     <tr>
       <th>SR NO</th>
       <th>TOPIC</th>
-      <th>VIDEO LECTURER</th>
+      <th>VIDEO LECTURE</th>
     </tr>
     <tr>
       <th></th>
