--- a/DBMS.htm
+++ b/DBMS.htm
@@ -25,7 +25,7 @@
   </style>
 
 <body>
-  <h1>Database Management System (DBMS)</h1>
+  <h1>Database Management <br> System (DBMS)</h1>
   <table>
     <tr>
       <th>SR NO</th>
