--- a/DBMS.htm
+++ b/DBMS.htm
@@ -23,9 +23,9 @@
       background-color: gray;
     }
   </style>
-
+</head>
 <body>
-  <h1>(DBMS)</h1>
+  <h1>Database Management System(DBMS)</h1>
   <table>
     <tr>
       <th>SR NO</th>
