--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -6,19 +6,16 @@
   <title>DBMSL</title>
 
   <style>
-    table,
-    th,
-    td {
+    table, th, td {
       border: 1px solid black;
       border-collapse: collapse;
     }
 
-    th,
-    td {
+    th, td {
       padding: 10px;
     }
 
-    table th {
+    table ,th {
       color: white;
       background-color: gray;
     }
