--- a/DBMS.htm
+++ b/DBMS.htm
@@ -6,15 +6,12 @@
   <title>DBMS</title>
 
   <style>
-    table,
-    th,
-    td {
+    table, th, td {
       border: 1px solid black;
       border-collapse: collapse;
     }
 
-    th,
-    td {
+    th, td {
       padding: 10px;
     }
 
