--- a/DBMS.htm
+++ b/DBMS.htm
@@ -31,31 +31,31 @@
     </tr>
     <tr>
       <td>M1 L1</td>
-      <td>Introduction to databases ,Database Management system,  <br> Characteristics of database approach Advantages of DBMS approach ,Referred from QuickCS.</td>
+      <td>Introduction to databases ,Database Management system, Characteristics of database approach Advantages of DBMS approach ,Referred from QuickCS.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/lPmMepN27VI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L2</td>
-      <td>Data Models, <br> Schema & Instances,Three Schema Architecture and Data Independence.
+      <td>Data Models, Schema & Instances,Three Schema Architecture and Data Independence.
 </td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/awolXDlvfjY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L3</td>
-      <td>Database languages,<br>DBMS interfaces and The Database System Environment.</td>
+      <td>Database languages, DBMS interfaces and The Database System Environment.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2TstY_rIqps" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L4</td>
-      <td>ER Model & Diagram ,Entity & Entity types,<br>Attributes and Types Of Attribute,Types of Entity,Entity sets.
+      <td>ER Model & Diagram ,Entity & Entity types, Attributes and Types Of Attribute,Types of Entity,Entity sets.
 </td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/0m-5fWyx1YM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L5</td>
-      <td>Relationship & Relationship Set,<br>Mapping Constraints(Cardinality ratio),Participation Constraints.
+      <td>Relationship & Relationship Set, Mapping Constraints(Cardinality ratio),Participation Constraints.
 </td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fmzud3mz5cY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
