--- a/ME.htm
+++ b/ME.htm
@@ -39,7 +39,7 @@ table th {
     <tr>
       <td>M1 L1</td>
       <td>Nature of Management, Characteristics of Management, Functions of Management,<br> Scope of Management concepts are discussed.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/5bROam5Epy4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/5bROam5Epy4" frameborder="0" ></iframe></td>
     </tr>
     <tr>
       <td>M1 L2</td>
