--- a/ADP.htm
+++ b/ADP.htm
@@ -67,12 +67,6 @@ Python program development, Programming examples and Demonstrations.</td>
 
     </tr>
     <tr>
-      <td>M1 L5</td>
-      <td></td>
-      <td></td>
-
-    </tr>
-    <tr>
       <td>M1 L6</td>
       <td>Importing Modules, and Ending a Program Early with <br> sys.exit() function with suitable Programming examples and Demonstrations</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/5HXhGOr_8nA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
@@ -98,6 +92,7 @@ and Demonstrations.</td>
 
     </tr>
   </table>
+  <p>L-5 Video is not there continue to L-6 after L-4.(As advised by mam.)</p>
 </body>
 
 </html>
