--- a/ME.htm
+++ b/ME.htm
@@ -52,17 +52,13 @@ table th {
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Qtxc_fFJH7w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L4</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
       <td>M1 L5</td>
       <td>Planning- Nature, Importance, Types of Plans.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/z0LGbr__VmI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
 
   </table>
+  <p><strong>Note:</strong>L4 video is not there from L3 to L5 continuation(As advised by mam.)</p>
 </body>
 
 </html>
