--- a/index.htm
+++ b/index.htm
@@ -89,6 +89,9 @@ a:active {
       <td>RPA</td>
     </tr>
   </table>
+  <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>                                    
 </body>
 
 </html>
