--- a/ME.htm
+++ b/ME.htm
@@ -22,6 +22,7 @@ table th {
 </head>
 <body>
   <h1>Management and Entreprenuer for IT Industry (ME)</h1>
+  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   
   <table>
     <tr>
