--- a/UP.htm
+++ b/UP.htm
@@ -28,6 +28,7 @@
 
 <body>
     <h1>Unix Programming</h1>
+    <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   <table>
     <tr>
       <th>SR NO</th>
