--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -25,6 +25,7 @@
 
 <body>
   <h1>DBMS Laboratory</h1>
+  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   <table>
     <tr>
       <th>SR NO</th>
