--- a/DBMS.htm
+++ b/DBMS.htm
@@ -23,6 +23,7 @@
 </head>
 <body>
   <h2>Database Management System(DBMS)</h2>
+  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   <table>
     <tr>
       <th>SR NO</th>
