--- a/CNS.htm
+++ b/CNS.htm
@@ -23,6 +23,7 @@ table th {
   
   <body>
    <h1>Computer Network and Security(CNS)</h1>
+    <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
     <table>
       <tr>
         <th>SR NO</th>
