--- a/ADP.htm
+++ b/ADP.htm
@@ -28,6 +28,7 @@
 
 <body>
   <h1>Application development using Python</h1>
+  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   <table>
     <tr>
       <th>SR NO</th>
