--- a/CNL.htm
+++ b/CNL.htm
@@ -29,6 +29,7 @@
 
 <body>
     <h1>Computer Network Laboratory(CNL)</h1>
+    <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   <table>
     <tr>
       <th>SR NO</th>
