--- a/UP.htm
+++ b/UP.htm
@@ -37,8 +37,7 @@
     </tr>
     <tr>
       <td>M1 L1</td>
-      <td>UNIX ARCHITECTURE, FEATURES, <br>ENVIRONMENTS and POSIX standards.
-</td>
+      <td>UNIX ARCHITECTURE, FEATURES, <br>ENVIRONMENTS and POSIX standards.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/jvwq9_mzafs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
