--- a/DS.htm
+++ b/DS.htm
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ME </title>
+  <title>DS</title>
 
 <style>
 table, th, td {
@@ -43,14 +43,24 @@ table th {
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/sPTpClcwsbs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L2</td>
-      <td></td>
-      <td><iframe width="150" height="150" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>M1 L2.1</td>
+      <td>Introduction to Arrays, Structures, Nested Structures.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/M1ZRl4d7_XY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td> L2.2</td>
+      <td>Structure Operations,Self Referential Structure,Union.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/3TBrP0nOwo4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L3</td>
-      <td></td>
-      <td><iframe width="150" height="150" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Pointers and Dynamic Memory Allocation.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/vcpUIcTAFks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L4</td>
+      <td>Dynamically Allocated Arrays,One-Dimensional Arrays, Two-Dimensional Arrays.</td>
+      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/0nXxVtoLf6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L5</td>
@@ -59,7 +69,7 @@ table th {
     </tr>
 
   </table>
-  <p><strong>Note:</strong>L4 video is not there from L3 to L5 continuation(As advised by mam.)</p>
+
 </body>
 
 </html>
