--- a/index.htm
+++ b/index.htm
@@ -6,49 +6,58 @@
 
 </head>
 <style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
+  td,
+  th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
 
-table th {
-  color: white;
-  background-color: gray;
-}
+  table th {
+    color: white;
+    background-color: gray;
+  }
+
   a:link {
-  text-decoration: none;
-}
+    text-decoration: none;
+  }
 
-a:visited {
-  text-decoration: none;
-}
+  a:visited {
+    text-decoration: none;
+  }
 
-a:hover {
-  text-decoration: underline;
-}
+  a:hover {
+    text-decoration: underline;
+  }
 
-a:active {
-  text-decoration: underline;
-}
+  a:active {
+    text-decoration: underline;
+  }
 </style>
 
 <body>
-  <h1>WELCOME TO CEC YOUTUBE LEARNING</h1>
+  <table style="width:50%";>
+    <tr>
+      <td>
+        <h2>WELCOME TO YOUTUBE LEARNING</h2>
+      </td>
+      <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Canara_Engineering_College_%28logo%29.jpg/300px-Canara_Engineering_College_%28logo%29.jpg" width="150" height="150"></td>
+    </tr>
+  </table>
   <table>
     <tr>
-    <th>SR NO</th>
-    <th>SUBJECT</th>
+      <th>SR NO</th>
+      <th>SUBJECT</th>
     </tr>
     <tr>
       <td>1.</td>
@@ -90,8 +99,8 @@ a:active {
     </tr>
   </table>
   <!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>                                    
+  <a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" /></a>
 </body>
 
 </html>
