--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
 </style>
 
 <body>
-  <table>
+  <table style="border-collapse: collapse">
     <tr>
       <td>
         <h2>WELCOME TO YOUTUBE LEARNING</h2>
