--- a/index.htm
+++ b/index.htm
@@ -43,15 +43,16 @@
   a:active {
     text-decoration: underline;
   }
+
 </style>
 
 <body>
-  <table style="border-collapse: collapse;">
+  <table>
     <tr>
-      <td>
+      <td style="border:none;">
         <h2>WELCOME TO YOUTUBE LEARNING</h2>
       </td>
-      <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Canara_Engineering_College_%28logo%29.jpg/300px-Canara_Engineering_College_%28logo%29.jpg" width="150" height="150"></td>
+      <td style="border:none;"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Canara_Engineering_College_%28logo%29.jpg/300px-Canara_Engineering_College_%28logo%29.jpg" width="150" height="150"></td>
     </tr>
   </table>
   <table>
