--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
 
 <body>
   <script type="text/javascript">
-        document.write("<center><font size=+3 style='color: green;'>");
+        document.write("<center><font size=+3 style='color: black;'>");
         var day = new Date();
         var hr = day.getHours();
         if (hr >= 0 && hr < 12) {
