--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,11 @@
 
 </head>
 <style>
+body{
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTl6YEAge1V5s_2ABxKdLyX7dgg2pdjCUD4Aw&usqp=CAU');
+  background-size: 300%  ;
+    background-repeat: no-repeat;
+}
   table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -19,13 +24,10 @@
     padding: 8px;
   }
 
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
 
   table th {
-    color: white;
-    background-color: gray;
+    background-color: #7DFDFE;
+    color:black;
   }
 
   a:link {
@@ -43,10 +45,20 @@
   a:active {
     text-decoration: underline;
   }
-
+  .styl{
+    color: white;
+    border: 2px solid black;
+    margin: 20px;
+    padding: 20px;
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTfwhk1exjqeI6_Y6SloQSYN2sPL-7QRuH2XA&usqp=CAU');
+    background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: 100% 100%;
+  }
 </style>
 
 <body>
+  <div class="styl">
   <script type="text/javascript">
         document.write("<center><font size=+3 style='color: black;'>");
         var day = new Date();
@@ -62,6 +74,7 @@
         }
         document.write("</font></center>");
     </script>
+  </div>
   <table>
     <tr>
       <td style="border:none;">
