--- a/UP.htm
+++ b/UP.htm
@@ -6,6 +6,11 @@
   <title>UP</title>
 
   <style>
+  body{
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTl6YEAge1V5s_2ABxKdLyX7dgg2pdjCUD4Aw&usqp=CAU');
+    background-size: 300%  ;
+      background-repeat: no-repeat;
+  }
     table,
     th,
     td {
@@ -19,8 +24,8 @@
     }
 
     table th {
-      color: white;
-      background-color: gray;
+      background-color: #7DFDFE;
+      color:black;
     }
   </style>
 
