--- a/ME.htm
+++ b/ME.htm
@@ -6,6 +6,11 @@
   <title>ME </title>
 
 <style>
+body{
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTl6YEAge1V5s_2ABxKdLyX7dgg2pdjCUD4Aw&usqp=CAU');
+  background-size: 300%  ;
+    background-repeat: no-repeat;
+}
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
@@ -15,15 +20,15 @@ th, td {
 }
 
 table th {
-    color: white;
-    background-color: gray;
+  background-color: #7DFDFE;
+  color:black;
 }
 </style>
 </head>
 <body>
   <h1>Management and Entreprenuer for IT Industry (ME)</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
-  
+
   <table>
     <tr>
       <th>
