--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -6,6 +6,11 @@
   <title>DBMSL</title>
 
   <style>
+  body{
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTl6YEAge1V5s_2ABxKdLyX7dgg2pdjCUD4Aw&usqp=CAU');
+    background-size: 300%  ;
+      background-repeat: no-repeat;
+  }
     table, th, td {
       border: 1px solid black;
       border-collapse: collapse;
@@ -16,8 +21,8 @@
     }
 
     table th {
-      color: white;
-      background-color: gray;
+      background-color: #7DFDFE;
+      color:black;
     }
   </style>
 
