--- a/CNS.htm
+++ b/CNS.htm
@@ -5,6 +5,11 @@
     <title>CNS</title>
 
   <style>
+  body{
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTl6YEAge1V5s_2ABxKdLyX7dgg2pdjCUD4Aw&usqp=CAU');
+    background-size: 300%  ;
+      background-repeat: no-repeat;
+  }
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
@@ -14,13 +19,13 @@ th, td {
 }
 
 table th {
-  color: white;
-  background-color: gray;
+  background-color: #7DFDFE;
+  color:black;
 }
 </style>
 
 </head>
-  
+
   <body>
    <h1>Computer Network and Security(CNS)</h1>
     <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
