--- a/ADP.htm
+++ b/ADP.htm
@@ -6,6 +6,11 @@
   <title>ADP</title>
 
   <style>
+  body{
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTl6YEAge1V5s_2ABxKdLyX7dgg2pdjCUD4Aw&usqp=CAU');
+    background-size: 300%  ;
+      background-repeat: no-repeat;
+  }
     table,
     th,
     td {
@@ -19,8 +24,8 @@
     }
 
     table th {
-      color: white;
-      background-color: gray;
+      background-color: #7DFDFE;
+      color:black;
     }
   </style>
 
@@ -42,7 +47,7 @@
     </tr>
     <tr>
       <td>M1 L1</td>
-      <td>Basics of python programming: Pythons IDLE (Integrated Development and <br>
+      <td>Basics of python programming: Pythons IDLE (Integrated Development and
 Learning Environment), Expressions, Basic arithmetic operators, Data types, Programming examples and Demonstrations.
 </td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/tUAeEZ0K0NY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
@@ -50,50 +55,50 @@ Learning Environment), Expressions, Basic arithmetic operators, Data types, Prog
     </tr>
     <tr>
       <td>M1 L2</td>
-      <td>Basic string operations, Defining variables, <br>
+      <td>Basic string operations, Defining variables,
 Variable naming rules, comments, Programming examples and Demonstrations</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/LPcQ3vmfID8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L3</td>
-      <td>Input and Output functions, Data types, Type conversion functions, string length method, <br>
+      <td>Input and Output functions, Data types, Type conversion functions, string length method,
 Python program development, Programming examples and Demonstrations.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2PSWjFO2gRs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L4</td>
-      <td> Boolean values, comparison and Boolean operators and how to use these operators in a conditional <br> expression with suitable Programming examples and Demonstrations</td>
+      <td> Boolean values, comparison and Boolean operators and how to use these operators in a conditional  expression with suitable Programming examples and Demonstrations</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/eoQlvr6QdL8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L6</td>
-      <td>Importing Modules, and Ending a Program Early with <br> sys.exit() function with suitable Programming examples and Demonstrations</td>
+      <td>Importing Modules, and Ending a Program Early with  sys.exit() function with suitable Programming examples and Demonstrations</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/5HXhGOr_8nA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L7</td>
-      <td> Functions, Definition and Parameters, Function Execution,<br> Advantages, Programming examples and Demonstrations.</td>
+      <td> Functions, Definition and Parameters, Function Execution, Advantages, Programming examples and Demonstrations.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/im5SK9zwjCE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L8</td>
-      <td>Functions, Definition and return values, <br> None datatype, Keyword parameters, Programming examples
+      <td>Functions, Definition and return values,  None datatype, Keyword parameters, Programming examples
 and Demonstrations.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/uSliWYDjFqM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L9</td>
-      <td> Functions and variable scope, Scope rules, <br> Elements of exception handling, Programming examples and Demonstrations.</td>
+      <td> Functions and variable scope, Scope rules, Elements of exception handling, Programming examples and Demonstrations.</td>
       <td><iframe width="150" height="150" src="https://www.youtube.com/embed/VV14IR_j8qk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
   </table>
-  
+
 </body>
 
 </html>
