--- a/CNL.htm
+++ b/CNL.htm
@@ -7,6 +7,11 @@
   <title>CNL</title>
 
   <style>
+  body{
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTl6YEAge1V5s_2ABxKdLyX7dgg2pdjCUD4Aw&usqp=CAU');
+    background-size: 300%  ;
+      background-repeat: no-repeat;
+  }
     table,
     th,
     td {
@@ -20,8 +25,8 @@
     }
 
     table th {
-      color: white;
-      background-color: gray;
+      background-color: #7DFDFE;
+      color:black;
     }
   </style>
 
